--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "description": "The backend for the gujrat startups, researchers and innovators.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev --name $npm_config_name && prisma generate",
+    "deploy": "prisma migrate deploy --name $migration_name && prisma generate",
+    "prisma:pull": "prisma db pull",
+    "prisma:push": "prisma db push",
+    "start": "tsc && node dist/index.js",
+    "dev": "concurrently \"tsc --watch\" \"node dist/index.js\""
   },
   "keywords": [
     "backend",
@@ -13,21 +19,27 @@
   "author": "OAtulA",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
     "@types/validator": "^13.12.1",
+    "concurrently": "^9.0.0",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
